<resources>
    <string name="app_name">SzallitoDrawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cim">Cím:</string>
    <string name="nev">Név:</string>
    <string name="telefonszam">Telefonszám:</string>
    <string name="kesz">Kész</string>
    <string name="torles">Törlés</string>
</resources>
